--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
             <input type="text" id="videoTitle" required>
 
             <label for="videoFile">Video File:</label>
-            <input type="file" id="videoFile" accept="video/*" required>
+            <input type="file" id="videoFile" required>
 
             <label for="audioFile">Audio File:</label>
-            <input type="file" id="audioFile" accept="audio/*" required>
+            <input type="file" id="audioFile" required>
 
             <button type="submit">Submit</button>
         </form>
